--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
 <body>
   <header>
     <h1>SP計算ツール</h1>
-    <nav class="menu">
-      <button id="menuButton">☰</button>
-      <ul id="menuList" class="hidden">
-        <li><button id="saveBtn">保存</button></li>
-        <li><button id="loadBtn">読込</button></li>
-        <li><button id="shareBtn">画面を共有</button></li>
-      </ul>
-    </nav>
+    <div class="header-right">
+      <div>合計SP: <span id="totalSP">0</span></div>
+      <label><input type="checkbox" id="kiremonoHeader">切れ者</label>
+      <nav class="menu">
+        <button id="menuButton">☰</button>
+        <ul id="menuList" class="hidden">
+          <li><button id="saveBtn">保存</button></li>
+          <li><button id="loadBtn">読込</button></li>
+          <li><button id="shareBtn">画面を共有</button></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <main>
@@ -25,10 +29,8 @@
           <th>スキル名</th>
           <th>SP</th>
           <th>ヒントLv</th>
-          <th>切れ者</th>
           <th>分類</th>
           <th>説明</th>
-          <th>削除</th>
         </tr>
       </thead>
       <tbody>
