--- a/index.html
+++ b/index.html
@@ -1,32 +1,62 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <title>SP計算ツール</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <header>
-    <h1>SP計算ツール</h1>
-  </header>
+let skills = [];
 
-  <main>
-    <table id="skillTable">
-      <thead>
-        <tr>
-          <th>スキル名</th>
-          <th>SP</th>
-          <th>ヒントLv</th>
-          <th>分類</th>
-          <th>説明</th>
-        </tr>
-      </thead>
-      <tbody>
-        <!-- JSでCSV行を追加 -->
-      </tbody>
-    </table>
-  </main>
+// CSVを読み込んでテーブルに表示
+async function loadCSV() {
+  const response = await fetch("skills.csv");
+  const text = await response.text();
 
-  <script src="script.js"></script>
-</body>
-</html>
+  const rows = text.trim().split("\n").map(r => r.split("\t"));
+  const headers = rows.shift().map(h => h.trim());
+
+  skills = rows.map(row => {
+    const obj = {};
+    headers.forEach((h, i) => {
+      obj[h] = row[i] ? row[i].trim() : "";
+    });
+    return obj;
+  });
+
+  console.log(skills); // デバッグ: 正しく読み込まれているか確認
+  renderTable();
+}
+
+// テーブル描画
+function renderTable() {
+  const tbody = document.querySelector("#skillTable tbody");
+  tbody.innerHTML = ""; // 既存行を削除
+
+  // CSVの行を順に描画
+  skills.forEach(skill => {
+    const tr = document.createElement("tr");
+
+    // スキル名
+    const tdSkill = document.createElement("td");
+    tdSkill.textContent = skill.skill || "";
+    tr.appendChild(tdSkill);
+
+    // SP
+    const tdSP = document.createElement("td");
+    tdSP.textContent = skill.sp || "0";
+    tr.appendChild(tdSP);
+
+    // ヒントLv（初期は0）
+    const tdHint = document.createElement("td");
+    tdHint.textContent = "0";
+    tr.appendChild(tdHint);
+
+    // 分類
+    const tdCategory = document.createElement("td");
+    tdCategory.textContent = skill.category || "";
+    tr.appendChild(tdCategory);
+
+    // 説明
+    const tdExplain = document.createElement("td");
+    tdExplain.textContent = skill.explain || "";
+    tr.appendChild(tdExplain);
+
+    tbody.appendChild(tr);
+  });
+}
+
+// DOMロード後に初期化
+window.addEventListener("DOMContentLoaded", loadCSV);
