--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
 <body>
   <header>
     <h1>SP計算ツール</h1>
+    <div class="header-right">
+      <div>合計SP: <span id="totalSP">0</span></div>
+      <label><input type="checkbox" id="kiremonoHeader">切れ者</label>
+      <nav class="menu">
+        <button id="menuButton">☰</button>
+        <ul id="menuList" class="hidden">
+          <li><button id="saveBtn">保存</button></li>
+          <li><button id="loadBtn">読込</button></li>
+          <li><button id="shareBtn">画面を共有</button></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <main>
@@ -22,7 +34,7 @@
         </tr>
       </thead>
       <tbody>
-        <!-- JSでCSV行を追加 -->
+        <!-- 行はJSで追加 -->
       </tbody>
     </table>
   </main>
