--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </tr>
       </thead>
       <tbody>
-        <!-- 行はJSで追加 -->
+        <!-- JSで行追加 -->
       </tbody>
     </table>
   </main>
