--- a/index.html
+++ b/index.html
@@ -1,50 +1,57 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SP計算ツール</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <link rel="stylesheet" href="styles.css" />
-  <!-- PapaParse for robust CSV parsing -->
-  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+  <!-- Choices.js -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css"/>
 </head>
 <body>
-  <header>
-    <h1>SP計算ツール</h1>
-    <div class="header-right">
-      <div class="total">合計SP: <span id="totalSP">0</span></div>
-      <label class="kire-label"><input type="checkbox" id="kiremonoHeader" /> 切れ者</label>
-      <nav class="menu">
-        <button id="menuButton" aria-label="メニュー">☰</button>
-        <ul id="menuList" class="hidden" role="menu">
-          <li><button id="saveBtn">保存</button></li>
-          <li><button id="loadBtn">読込</button></li>
-          <li><button id="shareBtn">画面を共有</button></li>
-        </ul>
-      </nav>
+  <div class="header">
+    <div class="header-left">
+      <h2>SP計算ツール</h2>
+      <div class="header-info">
+        <span>合計SP: <span id="totalSP">0</span></span>
+        <label><input type="checkbox" id="kiremonoHeader"> 切れ者</label>
+      </div>
     </div>
-  </header>
+    <div class="header-right">
+      <button id="menuButton">☰</button>
+      <ul id="menuList" class="hidden">
+        <li id="save">保存</li>
+        <li id="load">読込</li>
+        <li id="share">画面を共有</li>
+      </ul>
+    </div>
+  </div>
 
-  <main>
-    <table id="skillTable" aria-label="スキル一覧">
-      <thead>
+  <div class="container">
+    <table id="skillTable" class="table table-bordered">
+      <thead class="table-primary">
         <tr>
-          <th>スキル名</th>
-          <th>SP</th>
-          <th>ヒントLv</th>
-          <th>分類</th>
-          <th>説明</th>
+          <th class="t-empty"></th>      <!-- 空欄（−ボタン置き場） -->
+          <th class="t-category">分類</th>
+          <th class="t-skill">スキル名</th>
+          <th class="t-sp">SP</th>
+          <th class="t-hint">ヒントLv</th>
+          <th class="t-tags">効果</th>
+          <th class="t-explain">説明</th>
         </tr>
       </thead>
-      <tbody>
-        <!-- JSで行を追加 -->
-      </tbody>
-    </table>
+    <tbody>
+      <!-- JS が行を生成します -->
+    </tbody>
+  </table>
 
-    <!-- datalist はページに1つだけ置く（全行で共有） -->
-    <datalist id="skillList"></datalist>
-  </main>
-
+  <!-- 最下部の「行を追加」ボタンは HTML に記載（JS はクリック処理をバインド） -->
+  <div class="mt-2">
+    <button id="addRowButton" class="btn btn-primary btn-sm">＋ 行を追加</button>
+  </div>
+</div>
   <script src="script.js"></script>
 </body>
 </html>
