親スキル追加で子スキルが自動で追加されるように改修 スキル一覧からNoteを削除

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <table id="skillTable" class="table table-bordered">
       <thead class="table-primary">
         <tr>
-          <th class="th-empty"></th>      <!-- 空欄（−ボタン置き場） -->
+          <th class="th-empty"></th>
           <th class="th-category">分類</th>
           <th class="th-skill">スキル名</th>
           <th class="th-sp">SP</th>
@@ -44,7 +44,6 @@
       </tbody>
     </table>
 
-    <!-- 最下部の「行を追加」ボタンは HTML に記載 -->
     <div class="mt-2">
       <button id="addRowButton" class="btn btn-primary btn-sm">＋ 行を追加</button>
     </div>
