保存、読込、共有機能追加（まだ未調整）

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <ul id="menuList" class="hidden">
         <li id="save">保存</li>
         <li id="load">読込</li>
-        <li id="share">画面を共有</li>
+        <li id="share">内容を共有</li>
       </ul>
     </div>
   </div>
